# vertex-pipelines-demo

./: .gitignore  README.md  pipeline.py  pyproject.toml  tasks.py
components/data_generator/: Dockerfile  data_generator.yml  pyproject.toml
components/data_generator/src/: data_generator.py
components/evaluator/: Dockerfile  evaluator.yml  pyproject.toml
components/evaluator/src/: evaluator.py
components/preprocessor/: preprocessor.yml  pyproject.toml
components/preprocessor/src/: preprocessor.py
components/trainer/: Dockerfile  pyproject.toml  trainer.yml
components/trainer/src/: trainer.py
