[tool.poetry]
name = "data_generator"
version = "0.1.0"
description = ""
authors = ["amaotone <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.4"
fire = "^0.4.0"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
